objects/ssot__Disclosure__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentId__c</fullName>
        <label>Assessment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthoringMode__c</fullName>
        <label>Authoring Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclosureDocumentUrl__c</fullName>
        <label>Disclosure Document Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalDocumentErrorMessageText__c</fullName>
        <label>External Document Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalDocumentLaunchStatus__c</fullName>
        <label>External Document Launch Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Disclosure Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEinsteinGeneratedDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein Generated Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReplicateResponsesFromId__c</fullName>
        <label>Replicate Responses From</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Year__c</fullName>
        <label>Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658748732_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disclosure_ReplicateResponsesFromId__rel</label>
        <referenceTo>ssot__Disclosure__dlm</referenceTo>
        <relationshipLabel>Disclosure_ReplicateResponsesFromId__rel</relationshipLabel>
        <relationshipName>rel_1731658748732_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732247639333_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disclosure_AssessmentId_map_Assessme_rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>Disclosure_AssessmentId_map_Assessme_rel</relationshipLabel>
        <relationshipName>rel_1732247639333_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>